--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -472,6 +473,7 @@ footer .logo-ftr {
 footer .logo-accent {
   color: #f4f4fd;
 }
+
 .ftr {
   color: #f4f4fd;
   line-height: 1.5;
@@ -510,3 +512,47 @@ footer .logo-accent {
 }
 
 /* #endregion Footer */
+/* #region Modal window */
+.backdrop {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(46, 47, 66, 0.4);
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+  transition: is-open 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* .backdrop.is-open {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+} */
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  /*  display: flex;
+  align-items: center;
+  justify-content: center; */
+  width: 408px;
+  height: 584px;
+  background-color: #fcfcfc;
+  border-radius: 4px;
+}
+
+.modal-title {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+/* #endregion Modal window */
