--- a/css/styles.css
+++ b/css/styles.css
@@ -480,20 +480,26 @@ footer .logo-accent {
   letter-spacing: 0.02em;
   width: 264px;
 }
+.cont-ftr-icons {
+  margin-right: 80px;
+}
 
-.ftr-title {
+.ftr-title,
+.subscribe-text {
   color: #fff;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   margin-bottom: 16px;
 }
+
 .ftr-ul {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 16px;
 }
+
 .ftr-icon {
   height: 40px;
   width: 40px;
@@ -511,6 +517,54 @@ footer .logo-accent {
   background-color: #31d0aa;
 }
 
+.footer-form {
+  display: flex;
+  gap: 24px;
+}
+
+.form-mail {
+  width: 264px;
+  height: 40px;
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  padding-right: 16px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  color: #ffffff;
+}
+
+.form-mail::placeholder {
+  color: #ffffff;
+}
+
+.subsc-butn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4d5ae5;
+  cursor: pointer;
+  color: #fff;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border-radius: 4px;
+  min-width: 165px;
+  height: 40px;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-subscribe {
+  margin-left: 16px;
+  fill: #ffffff;
+}
+.subsc-butn:hover,
+.subsc-butn:focus {
+  background-color: #404bbf;
+}
 /* #endregion Footer */
 /* #region Modal window */
 .backdrop {
@@ -527,11 +581,11 @@ footer .logo-accent {
   transition: is-open 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .backdrop.is-open {
+.backdrop.is-open {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-} */
+}
 
 .modal {
   position: absolute;
