--- a/css/styles.css
+++ b/css/styles.css
@@ -529,11 +529,11 @@ footer .logo-accent {
   border: 1px solid #ffffff;
   border-radius: 4px;
   font-size: 12px;
-  line-height: 1.5;
+  line-height: 2;
   letter-spacing: 0.04em;
   padding-left: 16px;
   padding-right: 16px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: #ffffff;
 }
 
@@ -557,6 +557,7 @@ footer .logo-accent {
   border: none;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .icon-subscribe {
   margin-left: 16px;
   fill: #ffffff;
@@ -565,6 +566,7 @@ footer .logo-accent {
 .subsc-butn:focus {
   background-color: #404bbf;
 }
+
 /* #endregion Footer */
 /* #region Modal window */
 
@@ -586,6 +588,8 @@ footer .logo-accent {
   visibility: visible;
   pointer-events: initial;
   transition: is-open 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -593,11 +597,8 @@ footer .logo-accent {
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  /*  display: flex;
-  align-items: center;
-  justify-content: center; */
   width: 408px;
-  height: 584px;
+  min-height: 584px;
   background-color: #fcfcfc;
   border-radius: 4px;
   padding: 72px 24px 24px 24px;
@@ -609,6 +610,7 @@ footer .logo-accent {
 .btn-close {
   width: 24px;
   height: 24px;
+  padding: 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   display: flex;
@@ -628,6 +630,7 @@ footer .logo-accent {
 .btn-close:focus {
   background-color: #404bbf;
   border: none;
+  fill: #ffffff;
 }
 
 .close-icon {
@@ -646,7 +649,15 @@ footer .logo-accent {
 
 .modal-wrapper {
   position: relative;
-  gap: 8px;
+  margin-bottom: 8px;
+}
+
+.modal-form-wrapper {
+  position: relative;
+}
+
+.modal-wrapper .form {
+  margin-bottom: 16px;
 }
 
 .icon-form {
@@ -658,7 +669,7 @@ footer .logo-accent {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-form {
+.icon-form:focus .input-form {
   display: block;
   padding-left: 38px;
   padding-right: 16px;
@@ -671,11 +682,11 @@ footer .logo-accent {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-form:focus {
-  border-color: #4d5ae5;
+.icon-form:focus {
+  color: #4d5ae5;
 }
 
-.input-form:focus + .icon-form {
+.input-form:focus {
   color: #4d5ae5;
 }
 
@@ -728,32 +739,47 @@ textarea::placeholder {
 }
 
 .checkbox-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
   margin-right: 8px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-custom {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
 }
 
 .btn-sent {
-  background-color: #4d5ae5;
+  display: block;
+  min-width: 169px;
+  height: 56px;
   cursor: pointer;
-  color: #fff;
+  color: #ffffff;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
   padding: 16px 32px;
-  border-radius: 4px;
-  min-width: 169px;
-  height: 56px;
   border: none;
-  display: block;
+  border-radius: 4px;
   margin-right: auto;
   margin-left: auto;
+  background-color: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  font-family: "Roboto", sans-serif;
+font-size: 16px; }
 
 .btn-sent:hover,
 .btn-sent:focus {
@@ -763,4 +789,6 @@ textarea::placeholder {
 .checkbox-container {
   margin-bottom: 24px;
 }
+
+
 /* #endregion Modal window */
