--- a/css/styles.css
+++ b/css/styles.css
@@ -656,7 +656,7 @@ footer .logo-accent {
   position: relative;
 }
 
-.modal-wrapper .form {
+.modal-wrapper.form {
   margin-bottom: 16px;
 }
 
@@ -669,7 +669,7 @@ footer .logo-accent {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-form:focus .input-form {
+.icon-form:focus {
   display: block;
   padding-left: 38px;
   padding-right: 16px;
@@ -683,11 +683,23 @@ footer .logo-accent {
 }
 
 .icon-form:focus {
-  color: #4d5ae5;
+  fill: #4d5ae5;
+  stroke: #4d5ae5;
+}
+
+.input-form {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-form:focus {
-  color: #4d5ae5;
+  border-color: #4d5ae5;
 }
 
 .textarea-field {
@@ -724,6 +736,15 @@ textarea::placeholder {
   border-color: #4d5ae5;
 }
 
+.form-label {
+  display: block;
+  margin-bottom: 4px;
+}
+
+.checkbox-privacy {
+  margin-bottom: 24px;
+}
+
 .policy-link {
   font-size: 12px;
   line-height: 1.33;
@@ -733,15 +754,10 @@ textarea::placeholder {
   text-decoration: underline;
 }
 
-.form-label {
-  display: block;
-  margin-bottom: 4px;
-}
-
 .checkbox-label {
   font-size: 12px;
   line-height: 1.17;
-  letter-spacing: 0.04em
+  letter-spacing: 0.04em;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
   margin-right: 8px;
@@ -752,9 +768,9 @@ textarea::placeholder {
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -778,17 +794,13 @@ textarea::placeholder {
   background-color: #4d5ae5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  font-family: "Roboto", sans-serif;
-font-size: 16px; }
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+}
 
 .btn-sent:hover,
 .btn-sent:focus {
   background-color: #404bbf;
 }
-
-.checkbox-container {
-  margin-bottom: 24px;
-}
-
 
 /* #endregion Modal window */
