--- a/css/styles.css
+++ b/css/styles.css
@@ -682,12 +682,15 @@ footer .logo-accent {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-form:focus {
-  fill: #4d5ae5;
-  stroke: #4d5ae5;
+.icon-form:focus + {
+  border-color: #4d5ae5;
+  color: #4d5ae5;
 }
 
 .input-form {
+  display: block;
+  padding-left: 38px;
+  padding-right: 16px;
   width: 100%;
   height: 40px;
   border: 1px solid rgba(46, 47, 66, 0.4);
@@ -700,8 +703,12 @@ footer .logo-accent {
 
 .input-form:focus {
   border-color: #4d5ae5;
+  color: #4d5ae5;
 }
 
+.input-form:focus + .icon-form {
+  fill: #4d5ae5;
+}
 .textarea-field {
   display: block;
   padding: 8px 16px;
@@ -775,6 +782,15 @@ textarea::placeholder {
   align-items: center;
   justify-content: center;
   fill: transparent;
+}
+
+.modal-privacy:checked + .checkbox-label .checkbox-custom {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+.modal-privacy:focus + .checkbox-label .checkbox-custom {
+  border: 1px solid #4d5ae5;
 }
 
 .btn-sent {
